force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.css
.top-button {
    --slds-c-button-brand-color-background: #99c3ff;
    --slds-c-button-brand-color-border: #99c3ff;
    --slds-c-button-brand-color-background-hover: #66a5f4;
    --slds-c-button-brand-color-border-hover: #66a5f4;
    --slds-c-button-brand-color-background-active: #66a5f4;
    --slds-c-button-brand-text-color: black;
    --slds-c-button-brand-text-color-active: black;
    --slds-c-button-brand-text-color-hover: black;
}

[data-expanded='true'] {
    --slds-c-button-outline-brand-color-background: #cce1ff;
    --slds-c-button-outline-brand-color-border: #0056b4;
}

.bottom-button {
    --slds-c-button-outline-brand-color-background-hover: #cce1ff;
    --slds-c-button-outline-brand-color-background-active: #cce1ff;
    --slds-c-button-outline-brand-color-border-hover: #0056b4;
}

.flowButton:last-child {
    padding-right: 0px;
}

